<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragmentCamAll"
        android:title="@string/all" />
    <item
        android:id="@+id/searchFragmentCamFhaz"
        android:title="@string/fhaz" />
    <item
        android:id="@+id/searchFragmentCamRhaz"
        android:title="@string/rhaz" />
    <item
        android:id="@+id/searchFragmentCamMast"
        android:title="@string/mast" />
    <item
        android:id="@+id/searchFragmentCamChemcam"
        android:title="@string/chemcam" />
    <item
        android:id="@+id/searchFragmentCamMahli"
        android:title="@string/mahli" />
    <item
        android:id="@+id/searchFragmentCamMardi"
        android:title="@string/mardi" />
    <item
        android:id="@+id/searchFragmentCamNavcam"
        android:title="@string/navcam" />
    <item
        android:id="@+id/searchFragmentCamPancam"
        android:title="@string/pancam" />
    <item
        android:id="@+id/searchFragmentCamMinites"
        android:title="@string/minites" />
</menu>